<resources>
    <string name="app_name">Partify</string>
    <string name="login_button">Log in</string>
    <string name="host_button">Host Party</string>
    <string name="join_button">Join Party</string>
    <string name="logout_button">Logout</string>

    <string name="track_attributes_title">Tuneable Track attributes</string>
    <string name="seeds_selection_title">Seed selection</string>
    <string name="discover_title">Searching party</string>
    <string name="advertise_title">Creating party</string>
    <string name="playlist_title">Final playlist</string>
    <string name="final_user_title">Everything\'s done!</string>
    <string name="final_user_description">Your choices have been sent to host</string>

    <string name="acousticness">Acousticness</string>
    <string name="danceability">Danceability</string>
    <string name="duration_ms">Duration</string>
    <string name="energy">Energy</string>
    <string name="instrumentalness">Instrumentalness</string>
    <string name="key">Key</string>
    <string name="liveness">Liveness</string>
    <string name="loudness">Loudness</string>
    <string name="mode">Mode</string>
    <string name="popularity">Popularity</string>
    <string name="speechiness">Speechiness</string>
    <string name="tempo">Tempo</string>
    <string name="time_signature">Time signature</string>
    <string name="valence">Valence</string>

    <string name="min_checkbox">min</string>
    <string name="target_checkbox">target</string>
    <string name="max_checkbox">max</string>

    <string name="profile_image_description">Spotify profile image</string>
    <string name="arrow_button_description">Collapse and expand button</string>
    <string name="title_activity_user_selection">UserSelectionActivity</string>

    <string name="title_artists">Artists</string>
    <string name="title_tracks">Tracks</string>
    <string name="title_genres">Genres</string>
</resources>
